tests/NormalTests/paczka1/small_fuzzy/67082414.err
Error in line 2: EAUnn6J A380 0,7
Error in line 7: EAUnn6J S584 71,5
Error in line 10: EAUnn6J S695 38,3
Error in line 16: Msp2G A380 12,24
